# repo-for-coq-discourse-coq-nested-packages

./: README.md
projects/project_with_subproject/project/theory_a/theory/: dune  theory_a.v
projects/project_with_subproject/project/theory_b/: dune-project
projects/project_with_subproject/project/theory_b/theory/: dune  theory_b.v
projects/project_without_subproject/: _CoqProject
projects/project_without_subproject/project/: dune-project
projects/project_without_subproject/project/theory_a/: dune-project  theory_a.opam
projects/project_without_subproject/project/theory_b/theory/: theory_b.v
